fix post & comments image sizes + remove loader gif (was out of place)

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -99,9 +99,14 @@ select {
         margin-top: 0;
       }
     }
+    .pci-wrapper {
+      margin: 15px 0;
+    }
     img {
-      margin: 15px auto 0 auto;
+      margin: 0 0 0 10px;
       border-radius: 2px;
+      display: inline-block;
+      vertical-align: middle;
     }
   }
 }
